say-hi/pod-env.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: say-hi
  labels:
    app: say-hi
    name: berry
spec:
  containers:
  - name: say-hi
    image: eu.gcr.io/sap-p-and-i-big-data-vora/k8s-examples/say-hi:latest
    ports:
    - containerPort: 5000
