say-hi/svc-ext.yaml
kind: Service
apiVersion: v1
metadata:
  name: say-hi-ext
spec:
  selector:
    app: say-hi
    name: berry
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
