say-hi/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: say-hi
spec:
  rules:
  - host: berry.hi.datahub.sapcloud.io
    http:
      paths:
      - backend:
          serviceName: say-hi
          servicePort: 80
        path: /
